# anchor-24

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: no-cashing-tests.yaml  tests.yaml
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/src/: cluster.rs  lib.rs
lang/: Cargo.toml
lang/src/: bpf_writer.rs  common.rs  error.rs  idl.rs  lib.rs  system_program.rs
spl/: Cargo.toml
spl/src/: dex.rs  governance.rs  shmem.rs  token.rs
tests/: package.json
tests/anchor-cli-idl/: test.sh
tests/bpf-upgradeable-state/: Anchor.toml
tests/cashiers-check/: Anchor.toml
tests/cfo/: Anchor.toml
tests/chat/: Anchor.toml
tests/composite/: Anchor.toml
tests/cpi-returns/: Anchor.toml
tests/custom-coder/: Anchor.toml
tests/declare-id/: Anchor.toml
tests/docs/: Anchor.toml
tests/errors/: Anchor.toml
tests/escrow/: Anchor.toml
tests/events/: Anchor.toml
tests/floats/: Anchor.toml
tests/ido-pool/: Anchor.toml
tests/interface/: Anchor.toml
tests/lockup/: Anchor.toml
tests/misc/: Anchor.toml  ci.sh  miscNonRentExempt.ts
tests/multiple-suites/: Anchor.toml
tests/multisig/: Anchor.toml
tests/pda-derivation/: Anchor.toml
tests/pyth/: Anchor.toml
tests/safety-checks/: Anchor.toml
tests/swap/: Anchor.toml
tests/system-accounts/: Anchor.toml
tests/sysvars/: Anchor.toml
tests/tictactoe/: Anchor.toml
tests/typescript/: Anchor.toml
tests/validator-clone/: Anchor.toml
tests/zero-copy/: Anchor.toml
ts/: package.json  rollup.config.ts
(+104 files in other folders)
